Fixed attached label shadows so they don't look so out of place compared to the dropdowns.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1007,7 +1007,7 @@ a.ui.label {
 	padding: 0 4px 4px 0;
 }
 #resultsTabs > div .top.right.attached.ui.labels > .label {
-	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
+	box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 #resultsTabs > div .top.left.attached.ui.labels {
@@ -1018,7 +1018,10 @@ a.ui.label {
 	padding: 0 4px 4px 0;
 }
 #resultsTabs > div .top.left.attached.ui.labels > .label {
-	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
+	box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.25);
+}
+#resultsTabs > div .top.left.attached.ui.labels > .label:first-child {
+	border-bottom-left-radius: 0;
 }
 
 #resultsTabs > #geometry-map .top.left.attached.ui.labels {
